@@ -1,3 +1,8 @@
+2005-03-17  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gtk/gtkmodule.c (init_gtk): Regression, don't crash if sys.argv
+	isn't set.
+
 2005-03-16  Johan Dahlin  <jdahlin@async.com.br>
 
 	* tests/test_radiobutton.py (RadioButtonTest): New test.
